Update experience and education details in resume
This is fixing some AI nonsense, and a test of my workflow...

--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rob - Software Engineering Manager</title>
-    <meta name="description" content="Software Engineering Manager with 15+ years experience in defense software, distributed team leadership, and DevOps transformation.">
+    <meta name="description" content="Software Engineering Manager with 25+ years experience in defense software, distributed team leadership, and DevOps transformation.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -406,7 +406,7 @@
             <div class="job">
                 <div class="job-header">
                     <div>
-                        <h3>Bachelor of Science in Electrical Engineering</h3>
+                        <h3>Bachelor of Science in Computer Engineering</h3>
                         <div class="company">University of Connecticut</div>
                     </div>
                 </div>
