Update Landing - index.html
Just some wording cleanup

--- a/landing/index.html
+++ b/landing/index.html
@@ -95,17 +95,17 @@
 <body>
     <div class="container">
         <h1>TrailsEnd Services</h1>
-        <p>Welcome! Choose a service below:</p>
+        <p>Welcome!</p>
         
         <div class="links">
             <a href="https://guac.trailsendsrv.com" class="link-card">
-                <h2>🖥️ Remote Desktop</h2>
-                <p>Access your home PC from anywhere</p>
+                <h2>🖥️ Remote</h2>
+                <p>Access the Rig</p>
             </a>
             
             <a href="https://res.trailsendsrv.com" class="link-card">
                 <h2>📄 Resume</h2>
-                <p>View professional resume</p>
+                <p>About me :-)</p>
             </a>
         </div>
     </div>
