Update Resume -  index.html
Fixed Name

--- a/resume/index.html
+++ b/resume/index.html
@@ -305,7 +305,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Rob</h1>
+            <h1>Robert C. Gough</h1>
             <div class="title">Software Engineering Manager</div>
             <div class="contact-info">
                 <a href="https://www.linkedin.com/in/robert-gough-821b0a22">LinkedIn</a>
